css/style.css
body{
  background-image: url('/OGPLocator/img/background.png');
  font-family: Geneva, Tahoma, Arial, sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
  line-height: 30px;
  text-transform: uppercase;
}

h1 {
  font-size: 45px;
  text-transform: none;
  font-family: "Gill Sans", Geneva, Tahoma, Arial, sans-serif;
}

h2 {
  font-size: 32px;
  font-family: "Gill Sans", Geneva, Tahoma, Arial, sans-serif;
}

h3 {
  font-size: 21px;
  font-family: "Gill Sans", Geneva, Tahoma, Arial, sans-serif;
}

h4 {
  font-size: 18px;
  font-family: "Gill Sans", Geneva, Tahoma, Arial, sans-serif;
}

h6 {
  font-size: 13px;
  font-family: "Gill Sans", Geneva, Tahoma, Arial, sans-serif;
	padding-bottom: 5px;
}

a {color:#EB4600; text-decoration:none;}
a:hover {text-decoration:underline; color:#C93B00;}

#openbudget a {
  float: none;
  background: transparent;
  display: inline;
  color: black;
  font-weight: normal;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

#openbudget a.filter{
	  font-family: "Gill Sans", Geneva, Tahoma, Arial, sans-serif;
}

#openbudget {
  width: 960px;
  margin: 0 auto;
  padding-bottom: 40px;
}

  #openbudget header h2, #openbudget header nav {
    display: inline-block;
    vertical-align: middle;
    *display: inline;
    *zoom: 1;
    float: none;
  }

  #openbudget header nav{
    float:right;
    width:auto;
    margin:27px 0 0 0;
    text-align: right;
  }

    #openbudget header nav li.menu{
      position: relative;
      background: url('../img/arrow_downwards.png') no-repeat center right;
      padding-right: 8px;
      margin: 0 0 0 20px;
      font-size: 15px;
      text-transform: uppercase;
    }

      #openbudget header nav .filters{
        position: absolute;
        display: none;
        width: 135px;
        left: 50%;
        top: 33px;
        margin-left: -87.5px;
        padding: 0 20px;
        background: transparent url('/OGPLocator/img/menu_middle.png') repeat-y center center;
        text-align: left;
      }

      #openbudget header nav .filters.show{
        display: block;
        z-index: 1;
      }

        #openbudget header nav .filters img {
          position: absolute;
        }

        #openbudget header nav .filters img.border_top {
          top: -17px;
          left: 0;
        }

        #openbudget header nav .filters img.border_bottom {
          bottom: -16px;
          left: 0;
        }

        #openbudget header nav .filters li {
          display: block;
          padding:7px 0;
        }

        #openbudget header nav .filters li:last-child {
          padding-bottom:4px;
        }

        #openbudget header nav .filters a {
          display: block;
          width:100%;
          margin: 0;
          padding: 0;
          color: #FA5200;
          font:normal 13px "Gill Sans", Geneva, Tahoma, Arial, sans-serif;
          line-height:16px;
          text-align:left;
        }


  #openbudget #map{
    width: 958px;
    height: 320px;
    margin: 4px 0 32px;
    border: 1px solid rgba(0, 0, 0, 0.15)
  }

    #openbudget #map .custom-zoom div{
      width: 44px;
      height: 38px;
      background-repeat: no-repeat;
    }

      #openbudget #map .custom-zoom .in{
        background-image: url('/OGPLocator/img/zoom_plus.png');
				margin: 15px 15px 0 0;
      }

      #openbudget #map .custom-zoom .in:hover{
        background-image: url('/OGPLocator/img/zoom_plus_hover.png')
      }

      #openbudget #map .custom-zoom .in:active{
        background-image: url('/OGPLocator/img/zoom_plus_pushed.png')
      }

      #openbudget #map .custom-zoom .out{
        background-image: url('/OGPLocator/img/zoom_minus.png')
      }

      #openbudget #map .custom-zoom .out:hover{
        background-image: url('/OGPLocator/img/zoom_minus_hover.png')
      }

      #openbudget #map .custom-zoom .out:active{
        background-image: url('/OGPLocator/img/zoom_minus_pushed.png')
      }

  #openbudget .two_columns{

  }

    #openbudget .two_columns .left, #openbudget .two_columns .right {
      display: inline-block;
      vertical-align: middle;
      *display: inline;
      *zoom: 1;
      vertical-align: top;
    }

    #openbudget .two_columns .left {
    }

    #openbudget .two_columns .left .container {
      width: 566px;
      padding: 32px 32px 0 32px;
      margin-bottom: 30px;
      background-color: white;
      border: 1px solid #CCCCCC;
    }

    #openbudget #results .search {
      min-height: 638px;
    }

    #openbudget #results .search form {
      position: relative;
    }

      #openbudget #results .search form img, #openbudget #results .search form input.search_box {
        margin: 0;
        padding: 0;
      }

      #openbudget #results .search form input.search_box {
        width: 540px;
        height: 40px;
        padding: 0 10px;
        background-image: url('/OGPLocator/img/search_field_middle.png');
        border: 0 none;
        font-size: 15px;
        color: #CCCCCC;
        vertical-align: middle;
      }

      #openbudget #results .search form input.search_box:focus {
        outline:none;
        color:#777777;
      }

      #openbudget #results .search form input.mag_glass {
        position: absolute;
        top: 10px;
        right: 10px;
        width: 20px;
        height: 20px;
        background: transparent url("/OGPLocator/img/magnifier_icon.png") no-repeat center center;
        border: 0 none;
      }

    #openbudget #results .search div.summary {
      margin: 30px 0;
      font-size: 15px;
    }

      #openbudget #results .search div.summary .for, #openbudget #results .search div.summary .in, #openbudget #results .search div.summary .clear {
        display: none;
      }

      #openbudget #results .search div.summary .for.show, #openbudget #results .search div.summary .in.show, #openbudget #results .search div.summary .clear.show {
        display: inline;
      }

      #openbudget #results .search div.summary .clear a {
        color: #EB4600;
      }

    #openbudget #results .search ul {
      padding: 0;
      list-style-type: none;
    }

      #openbudget #results .search ul li {
        padding: 22px 0;
        border-top: 1px solid rgba(204, 204, 204, 0.6);
      }

        #openbudget #results .search ul li h3 {
          margin: 3px 0;
          line-height: 13px;
          color: #EB4600;
  				font-family: "Gill Sans", Geneva, Tahoma, Arial, sans-serif;
          text-transform: none;
        }

        #openbudget #results .search ul li a {
          font-size: inherit;
          text-decoration: none;
          color: inherit;
        }

        #openbudget #results .search ul li h3 a:hover {
          color: #C93B00;
          text-decoration:underline;
        }

        #openbudget #results .search ul li a.desc, #openbudget #results .search ul li a.where {
          font-size: 13px;
        }

    		#openbudget .two_columns .right {
      		width: 280px;
      		padding: 30px 0 0 32px;
    		}

      	#openbudget .two_columns .right div {
	        padding-bottom: 12px;
        	margin-bottom: 22px;
        	border-bottom: 1px solid rgba(0, 102, 153, 0.10);
      	}

      	#openbudget .two_columns .right div.last {
        	border-bottom: 0 none;
      	}

        #openbudget .two_columns .right div h4 {
          margin: 0;
        }

        #openbudget .two_columns .right div p {
          margin: 0 0 15px 0;
          font-size: 13px;
					line-height: 18px;
          color: #8A9298;
        }

        #openbudget .two_columns .right div a {
          font-size: 13px;
          color: #FA5200;
          text-decoration: none;
        }

        #openbudget .two_columns .right div a:hover {
          color: #C93B00;
          text-decoration:underline;
        }

      #openbudget .two_columns .right div ul{
        margin: 0;
        padding: 0;
        list-style-type: none;
      }

#openbudget #back {
  display: block;
  margin: 20px 0;
  padding-left: 8px;
  background: url('/OGPLocator/img/arrow_left.png') no-repeat center left;
  font-size: 15px;
  color: black;
  font-family: "Gill Sans", Geneva, Tahoma, Arial, sans-serif;
  text-transform: uppercase;
  text-decoration: none;
}

  #openbudget #case_detail .container header {
    margin-bottom: 40px;
  }

    #openbudget #case_detail .container header h1 {
      padding:0;
      margin:0;
      line-height:45px;
    }

    #openbudget #case_detail .container header span {
      color: rgba(51, 51, 51, 0.7);
      font-size: 15px;
    }

  #openbudget #case_detail .container div {
    margin-bottom: 40px;
  }

    #openbudget #case_detail .container div h4 {
      color: #009933;
      line-height: 0px;
    }

    #openbudget #case_detail .container div p {
      font-size: 15px;
    }

    #openbudget #case_detail #experiencies {
    }

      #openbudget #case_detail #experiencies h4 {
        margin: 0;
      }

      #openbudget #case_detail #experiencies ul {
        padding: 0 0 5px 0;
        list-style-type: none;
      }

        #openbudget #case_detail #experiencies ul li {
          margin: 15px 0;
        }

          #openbudget #case_detail #experiencies ul li h3 {
            margin: 0;
						line-height: 18px;
          }

            #openbudget #case_detail #experiencies ul li h3 a {
              color: #EB4600;
              text-transform: none;
            }

          #openbudget #case_detail #experiencies ul li span {
            color: #333333;
            font-size: 13px;
          }

  #openbudget #case_detail #mini_map{
    position:relative;
    width: 298px;
    height: 348px;
    padding: 0;
    border: 1px solid rgba(0, 0, 0, 0.15)
  }

  #openbudget #case_detail #mini_map p{
    position:absolute;
    top:50%;
    left:50%;
    width:150px;
    margin:-50px 0 0 -75px;
    text-align:center;
    color:#666666;
    font:bold 12px Arial;
    text-transform:uppercase;
  }

  #openbudget #case_detail .sidebar {
  	padding: 0 0 0 32px;
	}

  #openbudget #case_detail .sidebar li {
    margin: 10px 0;
  }

  #openbudget #case_detail .sidebar h6 {
    line-height: 13px;
    margin: 0;
  }

  #openbudget #case_detail .sidebar li span {
    font-size: 13px;
    color: #8A9298;
  }

